# quantum-writer

./: .env.example  .gitignore  ACTION_PLAN.md  AI_DEVELOPMENT_GUIDE.md  AI_ENHANCEMENT_IDEAS.md  CLAUDE.md  DEVELOPMENT_LOG.md  Dockerfile  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_STATUS.md  MVP_ROADMAP.md  Makefile  README.md  README_V2.md  ai_interface.py  alembic.ini  app.py  context_manager.py  docker-compose.yml  initialize_story.py  pyproject.toml  requirements.txt  story_manager.py
.github/workflows/: ci.yml  deploy-cloudflare-pages.yml
aiosqlite/: __init__.py
app/: main.py
app/alembic/: env.py
app/api/: ai.py  auth.py  stories.py
app/core/: ai_registry.py  config.py
app/db/: session.py
app/domain/ai/: adapters.py
app/domain/auth/: dependencies.py  models.py  (+3 more)
app/tests/: test_health.py  test_story_flow.py
context/: CHAPTER 1 - Optimization Parameters  Ghostwriters Addendum.txt  Prologue Alpha.txt  Synopsis.txt
data/: story.json
frontend/: Dockerfile.dev  next.config.js  package-lock.json  package.json  wrangler.toml
infrastructure/cloudflare/: README.md  SETUP.md
infrastructure/kong/: kong.yml
infrastructure/postgres/: init.sql
infrastructure/prometheus/: prometheus.yml
services/ai/: alembic.ini  requirements.txt
services/analysis/: requirements.txt
services/auth/: Dockerfile.dev  requirements.txt
services/context/: Dockerfile.dev  requirements.txt
services/story/: Dockerfile.dev  alembic.ini  requirements.txt
services/websocket/: requirements.txt
static/: style.css
templates/: analysis.html  index.html  story.html
(+74 files in other folders)
