[tool.poetry]
name = "quantum-writer"
version = "0.1.0"
description = "Quantum Writer monolith"
authors = ["AI"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110"
uvicorn = {extras = ["standard"], version = "^0.27"}
SQLAlchemy = {extras = ["asyncio"], version = "^2.0"}
asyncpg = "^0.29"
pgvector-python = "^0.2"
pydantic = "^2.7"
alembic = "^1.13"
python-dotenv = "^1.0"
passlib = "^1.7"
pyjwt = "^2.8"
bcrypt = "^4.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4"
black = "^24.3"
pytest = "^8.2"
httpx = "^0.27"

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
